After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742659 - About animation isn't dismissable
About animation isn't dismissable
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
unspecified
Other Linux
: Normal trivial
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-09 17:23 UTC by Lasse Schuirmann
Modified: 2015-01-11 03:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
workbench: allow exiting from credits with enter/space/escape. (1.93 KB, patch)
2015-01-11 03:39 UTC, Christian Hergert
committed Details | Review

Description Lasse Schuirmann 2015-01-09 17:23:34 UTC
Would be nice if the about animation could be exited via esc. The only way to get out of there I found was reclicking about and thats not that intuitive.
Comment 1 Christian Hergert 2015-01-11 03:39:12 UTC
Created attachment 294265 [details] [review]
workbench: allow exiting from credits with enter/space/escape.

All the normal keys to escape from something like this. I guess we could
cancel on pretty much any key, but this seems good enough.
Comment 2 Christian Hergert 2015-01-11 03:39:42 UTC
Attachment 294265 [details] pushed as 99387f9 - workbench: allow exiting from credits with enter/space/escape.