workbench: allow exiting from credits with enter/space/escape.

All the normal keys to escape from something like this. I guess we could
cancel on pretty much any key, but this seems good enough.

https://bugzilla.gnome.org/show_bug.cgi?id=742659